<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.baseactivity.BaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/tab_blue"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/index_search_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/btn_search" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioGroup
                    android:id="@+id/index_tab_rg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/index_tab_tuijian_rb"
                        style="@style/Tab_text_style"
                        android:text="@string/index_tab_tuijian" />

                    <RadioButton
                        android:id="@+id/index_tab_yueku_rb"
                        style="@style/Tab_text_style"
                        android:text="@string/index_tab_yueku" />

                    <RadioButton
                        android:id="@+id/index_tab_bangdan_rb"
                        style="@style/Tab_text_style"
                        android:text="@string/index_tab_bangdan" />
                </RadioGroup>
            </LinearLayout>

            <ImageView
                android:id="@+id/index_music_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@mipmap/music_sign_white1" />
        </LinearLayout>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/index_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>

</LinearLayout>
